--- a/BinanceAPI/BinanceAPI.csproj
+++ b/BinanceAPI/BinanceAPI.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Klines.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\TickerPrice.cs" />
     <Compile Include="Models\TradingSimulatorModel.cs" />
