--- a/BinanceTradingSimulator/BinanceTradingSimulator.csproj
+++ b/BinanceTradingSimulator/BinanceTradingSimulator.csproj
@@ -161,10 +161,11 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\TradingSimulator\OrdersView.cshtml" />
     <Content Include="Views\TradingSimulator\TransactionsView.cshtml" />
-    <Content Include="Views\TradingSimulator\TestnetOrderView.cshtml" />
+    <Content Include="Views\TradingSimulator\PlaceTestnetOrder.cshtml" />
     <Content Include="Views\TradingSimulator\BinancePingAPI.cshtml" />
     <Content Include="Views\TradingSimulator\TickerPrice24hr.cshtml" />
     <Content Include="Views\TradingSimulator\KlinesValues.cshtml" />
+    <Content Include="Views\TradingSimulator\PlaceOrder.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
